--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="unoCounter.css">
     </head>
     <body>
-        <h1>UnoCounter</h1>
+        <h1>UnoScoreCounter</h1>
 
         <!--Adding Players-->
         <div id="addPlayers">
@@ -22,8 +22,8 @@
         </div>
         <div id="round">
             <p id="scoreAdderName">NIL</p>
-            Adding: <input type="number" id="scoreInput" value="0">
-            <button type="button" onclick="addScore()">Add</button>
+            Adding: <input type="number" id="scoreInput" value="0"> Points
+            <button type="button"  onclick="addScore()">Add</button>
         </div>
 
         <!--Results-->
