--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+        <!--<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" /> -->
         <title>UnoCounter</title>
         <link rel="stylesheet" href="unoCounter.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
