--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <!--<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" /> -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>UnoCounter</title>
         <link rel="stylesheet" href="unoCounter.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
