polishing and finishing code

--- a/index.html
+++ b/index.html
@@ -39,8 +39,22 @@
                     <p id="currentPlayersHeading"> </p>
                 </div>
             </div>
+
+            <!--Last Round-->
+            <div id="lastRound">
+                Last Round!
+            </div>
+
+
+
     
             <!--New Adding Round-->
+            <div class="buttonDivider">
+                <button type="button" onclick="NewAddRound()" id="nextRoundButton">Add Round</button>
+            </div>
+            <div id="roundNumber">
+                Round 3
+            </div>
             <div id="newRound">
                 <!--<div class= NEWNewRound><span class="NEWNewRoundName">TestPlayer</span><span class="NEWNewRoundScore">345</span> <input type="number"><button type="button">Add</button></div> -->
             </div>
@@ -49,20 +63,6 @@
             </div>
 
 
-            <!--Adding a new round-->
-            <div id="lastRound">
-                Last Round!
-            </div>
-            <div class="buttonDivider">
-                <button type="button" onclick="NewAddRound()" id="nextRoundButton">Add Round</button>
-            </div>
-            <div id="round">
-                <p id="roundNumber">Round: 0</p>
-                <p id="scoreAdderName">NIL</p>
-                Adding: <input type="number" id="scoreInput" value="0"> Points
-                </br>
-                <button type="button" id="addScoreButton" onclick="addScore()">Add</button>
-            </div>
     
             <!--Results-->
             <div class="buttonDivider">
